# hyuabot-building-updater

./: .gitignore  .python-version  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-check.yml  default.yml  deploy.yml
src/: main.py  models.py
src/resources/: location.csv
src/scripts/: building.py  map.py  room.py
src/utils/: database.py
tests/: insert_campus_data.py  test_building_data.py
