[build-system]
requires = ["setuptools>=83.0.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyuabot-building-updater"
description = "Scripts to update the building data to use in HYUabot"
readme = "README.md"
requires-python = ">=3.14"
version = "24.04.01"
classifiers = [
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
lint = ["flake8>=7.3.0"]
typecheck = ["mypy>=2.3.0", "sqlalchemy[mypy]>=2.0.51", "types-beautifulsoup4>=4.12.0.20250516"]
test = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0"]
